--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,6 +11,7 @@ body {
  display: grid;
  justify-items: center;
  align-items: center;
+  position: relative;
 }
 
 .loop {
@@ -31,7 +32,8 @@ body {
     filter: brightness(.6); 
     z-index: 1;
   }
-  & > * {
+  &__studios,
+  &__header {
     position: relative;
     z-index: 2;
   }
@@ -68,6 +70,9 @@ body {
   }
   &__button--open {
     background-color: transparent;
+    @include u.breakpoint(large) {
+      display: none;
+    }
   }
   &__icon--open {
     background-color: transparent;
@@ -89,21 +94,103 @@ body {
     @include u.tgSize( 'josefin' ,clamp(2.5rem, 0.5916rem + 8.1425vw, 4.5rem), 300);
     text-transform: uppercase;
     color: var(--white);
+    z-index: 1;
   }
 }
 
 .loop {
+  &__navs {
+    position: absolute;
+    inset: 0;
+    background-color: var(--black);
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    @include u.breakpoint(large) {
+      display: flex;
+      opacity: 1;
+      background-color: transparent;
+    }
+  }
+  
+  &__navs--bg,
+  &__navs {
+    opacity: 0;
+    translate: 55vw 0;
+    transition-property: opacity display;
+    transition: .4s;
+    transition-behavior: allow-discrete;
+    z-index: 5;
+
+    &:where(:not(.display__none)) {
+      display: allow-discrete flex; 
+      opacity: 1;
+      translate: 0 0;
+
+      @starting-style {
+        opacity: 0;
+        translate: 55vw 0;
+      }
+    }
+  }
+
+  &__mobile {
+    inline-size: min(u.rem(608), 100%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @include u.breakpoint(large) {
+      display: none;  
+    }
+  }
+
+  &__link {
+    @include u.tgSize('josefin', $text-5, 300);
+    text-transform: uppercase;
+    line-height: 1;
+    @include u.breakpoint(large) {
+      @include u.tgSize('alata', $text-7, 400);
+      text-transform: capitalize;
+      filter: brightness(1.2);
+    }
+  }
+
+  &__navs--bg {
+    position: absolute;
+    inset: 0;
+    background-color: var(--black);
+    z-index: 2; 
+    @include u.breakpoint(large) {
+      background-color: transparent; 
+    }
+  }
+
+  &__logo--nav,
+  &__button--close {
+    background-color: transparent;
+
+    @include u.breakpoint(large) {
+      display: none;
+    }
+  }
 
   &__menu {
     display: flex;
     flex-direction: column; 
+    gap: $space-300;
+
     @include u.breakpoint(large) {
       flex-direction: row;
+      align-self: end;
       gap: $space-400;
       @include u.tgSize('alata', $text-7, 400);
       text-transform: capitalize;
       color: var(--white);
       filter: brightness(1.2);
+
     }
   }
 }
@@ -113,12 +200,12 @@ body {
     position: relative;
     transition: transform .3s ease;
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.1);
     }
     &::before {
       position: absolute;
       content: '';
-      inset-block-end: -40%;
+      inset-block-end: -70%;
       inset-inline-start: 50%;
       inline-size: 70%;
       block-size: u.rem(2);
@@ -133,6 +220,7 @@ body {
   }
 
 .leader {
+  background-color: var(--grey200);
   inline-size: clamp(20.4375rem, 3.6794rem + 71.5013vw, 38rem);
   display: grid;
   grid-template-columns: 1fr;
@@ -263,9 +351,18 @@ body {
     color: var(--black);
   }
 
-  &__button,
+  &__button {
+    inline-size: min(u.rem(157), 100%);
+    @include u.breakpoint(large) {
+      display: none;
+    }
+  }
   &__button--desktop {
     inline-size: min(u.rem(157), 100%);
+      display: none;
+    @include u.breakpoint(large) {
+      display: flex;
+    }
   }
 
   &__link,
@@ -276,17 +373,19 @@ body {
     align-items: center;
     margin-inline: auto;
     border: u.rem(1) solid black;
-    box-shadow: 0 u.rem(2) u.rem(5) rgba(0, 0, 0, 0.4); // 
+    box-shadow: 0 u.rem(2) u.rem(5) rgba(0, 0, 0, 0.4), 0 u.rem(-2) u.rem(-5) rgba(0, 0, 0 , .4); // 
     @include u.tgSize('alata', $text-7, 400);
+    text-transform: uppercase;
     letter-spacing: u.rem(5);
     padding-block: $space-100;
+
     &:hover,
     &:focus {
       background-color: var(--black);
       color: var(--white);
       transition: all .5s ease;
       cursor: pointer;
-    }text-transform: uppercase;
+    }
 
   }
 } 
