--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -329,7 +329,7 @@ body {
   &__leads {
     @include u.tgSize('alata', $text-6, 400);
     line-height: 1.6;
-    color: #979797;
+    color: #3B3A3A;
     text-align: center;
 
     @include u.breakpoint(large) {
