--- a/assets/scss/globals/_colors.scss
+++ b/assets/scss/globals/_colors.scss
@@ -4,5 +4,5 @@
   --grey200: hsl(0, 0%, 85%);
   --blue100: hsl(215, 30%, 92%);
   --blue50: hsl(213, 100%, 98%);
-  --grey300: hsl(0, 0%, 38%);
+  --grey300: #A19C9C;
 }
