--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ p a {
   --grey200: hsl(0, 0%, 85%);
   --blue100: hsl(215, 30%, 92%);
   --blue50: hsl(213, 100%, 98%);
-  --grey300: hsl(0, 0%, 38%);
+  --grey300: #A19C9C;
 }
 
 @font-face {
