--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,11 @@ body {
     padding-block-start: 4rem;
   }
 }
+@media (min-width: 75em) {
+  .loop {
+    margin-block-end: 10rem;
+  }
+}
 .loop::before {
   position: absolute;
   content: "";
