--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -432,7 +432,7 @@ body {
     position: relative;
     cursor: pointer;
     &:hover .gallery__image {
-      filter: contrast(.1);
+      filter: contrast(.2)  brightness(180%);
     }
     &:hover .gallery__text {
         color: var(--black);
