--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -553,7 +553,7 @@ body {
   cursor: pointer;
 }
 .gallery__item:hover .gallery__image {
-  filter: contrast(0.1);
+  filter: contrast(0.2) brightness(180%);
 }
 .gallery__item:hover .gallery__text {
   color: var(--black);
